# cmakeup

./: .gitignore  README.md
cmakeup/FTAPI4CPP/: FTAPI4CPP_pkg.cmake
cmakeup/Tokenizer/: README.md  Tokenizer_pkg.cmake
cmakeup/abseil/abseil-cpp/demo/: CMakeLists.txt
cmakeup/cill/: cill_pkg.cmake
cmakeup/facebookresearch/fastText/demo/: CMakeLists.txt  README.md  demo.cpp  main.cpp
cmakeup/gabime/spdlog/demo/: demo.cpp
cmakeup/googletest/: README.md
cmakeup/innerNULL/famuli/: famuli_pkg.cmake
cmakeup/innerNULL/famuli/demo/: CMakeLists.txt  demo.cpp
cmakeup/module/: cmakeup.cmake  vcpkg_helpers.cmake
cmakeup/nlohmann_json/: json_pkg.cmake
cmakeup/pkg/ARMmbed/mbedtls/: ARMmbed_mbedtls_pkg.cmake  mbedtls_pkg.cmake
cmakeup/pkg/ARMmbed/mbedtls/demo/: CMakeLists.txt  demo.cpp
cmakeup/pkg/Tencent/rapidjson/: Tencent_rapidjson_pkg.cmake
cmakeup/pkg/Tencent/rapidjson/examples/: CMakeLists.txt  example.cpp
cmakeup/pkg/Tokenizer/: README.md  Tokenizer_pkg.cmake.ext
cmakeup/pkg/abseil/abseil-cpp/: abseil_abseil-cpp_pkg.cmake
cmakeup/pkg/abseil/abseil-cpp/examples/: CMakeLists.txt  example.cpp
cmakeup/pkg/boostorg/boost/: boostorg_boost_pkg.cmake
cmakeup/pkg/boostorg/boost/demo/: CMakeLists.txt  demo.cpp  ws_client_demo.cpp  wss_client_demo.cpp
cmakeup/pkg/cill/: cill_pkg.cmake
cmakeup/pkg/edenhill/librdkafka/: librdkafka_pkg.cmake
cmakeup/pkg/edenhill/librdkafka/demo/: CMakeLists.txt  demo.cpp
cmakeup/pkg/facebookresearch/fastText/: facebookresearch_fastText_pkg.cmake  fastText_pkg.cmake
cmakeup/pkg/facebookresearch/fastText/demo/: CMakeLists.txt
cmakeup/pkg/facebookresearch/fastText/examples/: CMakeLists.txt  example.cpp
cmakeup/pkg/gabime/spdlog/: gabime_spdlog_pkg.cmake
cmakeup/pkg/gabime/spdlog/archive/: spdlog_pkg.cmake
cmakeup/pkg/gabime/spdlog/demo/: CMakeLists.txt
cmakeup/pkg/gabime/spdlog/examples/: CMakeLists.txt  example.cpp
cmakeup/pkg/innerNULL/famuli/: famuli_pkg.cmake
cmakeup/pkg/innerNULL/famuli/demo/: CMakeLists.txt  demo.cpp
cmakeup/pkg/libeigen/eigen/: libeigen_eigen_pkg.cmake
cmakeup/pkg/libeigen/eigen/examples/: CMakeLists.txt  example.cpp
cmakeup/pkg/milvus/: milvus_sdk_header_pkg.cmake
cmakeup/pkg/nlohmann/json/: nlohmann_json_pkg.cmake
cmakeup/pkg/nlohmann/json/examples/: CMakeLists.txt  example.cpp
cmakeup/pkg/nlohmann_json/: json_pkg.cmake
cmakeup/pkg/oatpp/oatpp/: oatpp_oatpp_pkg.cmake  oatpp_pkg.cmake  oatpp_pkg_v0.cmake
cmakeup/pkg/oatpp/oatpp-mbedtls/: oatpp-mbedtls_pkg.cmake  oatpp-mbedtls_pkg.cmake.bak  oatpp-mbedtls_pkg_dev.cmake  oatpp_oatpp-mbedtls_pkg.cmake
cmakeup/pkg/oatpp/oatpp-mbedtls/demo/: CMakeLists.txt  demo.cpp
cmakeup/pkg/oatpp/oatpp-websocket/: oatpp-websocket_pkg.cmake  oatpp_oatpp-websocket_pkg.cmake
cmakeup/pkg/oatpp/oatpp-websocket/demo/: CMakeLists.txt  alpaca_wss_demo.cpp  demo.cpp  echo_ws_demo.cpp
cmakeup/pkg/oatpp/oatpp/demo/: CMakeLists.txt  demo.cpp
cmakeup/pkg/pytorch/pytorch/: pytorch_pytorch_pkg.cmake
cmakeup/pkg/pytorch/pytorch/examples/: CMakeLists.txt  example.cpp  mnist.cpp
cmakeup/pkg/redis/hiredis/: hiredis_pkg.cmake
cmakeup/pkg/redis/hiredis/demo/: CMakeLists.txt  README.md  demo.cpp
cmakeup/pkg/simdjson/simdjson/: simdjson_simdjson_pkg.cmake
cmakeup/pkg/simdjson/simdjson/examples/: CMakeLists.txt  example.cpp
cmakeup/pkg/whoshuu/cpr/: README.md  whoshuu_cpr_pkg.cmake
cmakeup/pkg/whoshuu/cpr/examples/: CMakeLists.txt  https_example.cpp
cmakeup/pkg/yhirose/cpp-httplib/: yhirose_cpp-httplib_pkg.cmake
cmakeup/pkg/yhirose/cpp-httplib/examples/: CMakeLists.txt  https_server_example.cpp
cmakeup/pkg/zeromq/cppzmq/: cppzmq_pkg.cmake
cmakeup/pkg/zeromq/cppzmq/demo/: CMakeLists.txt  demo.cpp
cmakeup/pkg/zeromq/libzmq/: libzmq_pkg.cmake
cmakeup/pkg/zeromq/libzmq/demo/: CMakeLists.txt  demo.cpp
cmakeup/sentencepiece/: README.md  sentencepiece_pkg.cmake
cmakeup/spdlog/: spdlog_pkg.cmake
examples/vcpkg_integration/sqlite3/: CMakeLists.txt
examples/vcpkg_integration/whoshuu_cpr/: CMakeLists.txt  http_client_example.cpp  https_client_example.cpp
